--- a/cppdemo/day01/day01.vcxproj.filters
+++ b/cppdemo/day01/day01.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="01_HelloWorld.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="09_PointerAndMethod.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="10_PointerAndStruct.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="swap.h">
