--- a/cppdemo/cppdemo.vcxproj.filters
+++ b/cppdemo/cppdemo.vcxproj.filters
@@ -56,5 +56,23 @@
     <ClCompile Include="21_NewAndDelete.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="22_Reference01.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="23_Reference02.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="24_ConstructorAndDestructor.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="25_ClassMemberVariable.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="26_Friend.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="27_IODemo1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
