--- a/cppdemo/cppdemo.vcxproj
+++ b/cppdemo/cppdemo.vcxproj
@@ -154,6 +154,12 @@
     <ClCompile Include="10_PointerAndStruct.cpp" />
     <ClCompile Include="20_Memory.cpp" />
     <ClCompile Include="21_NewAndDelete.cpp" />
+    <ClCompile Include="22_Reference01.cpp" />
+    <ClCompile Include="23_Reference02.cpp" />
+    <ClCompile Include="24_ConstructorAndDestructor.cpp" />
+    <ClCompile Include="25_ClassMemberVariable.cpp" />
+    <ClCompile Include="26_Friend.cpp" />
+    <ClCompile Include="27_IODemo1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
